# Configuration.management_practice_2

./: README.md  pyproject.toml  pyproject_structure.py  structure.txt
Vehicles/: Car.py  ElectricCar.py  __init__.py
app/: TestCar.py  main.py
