[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "vehicle-project"
version = "0.1.0"
description = "A simple vehicle management system"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = []
requires-python = ">=3.8"

[tool.vehicle]
app_name = "Vehicle Manager"
debug = true
max_vehicles = 10
database_url = "sqlite:///vehicles.db"